test/Fail/StrangeRecursiveUnquote.err
StrangeRecursiveUnquote.agda:12.13-33: error: [Unquote.NonCanonical]
Cannot unquote non-canonical term
  f n
when checking that the expression unquote (give (f n)) has type
Term
